@@ -33,7 +33,7 @@ lev1820.esx 14 48 58 57 0 14 1192371006 866 1574
 lev1030.esx 9 48 57 55 0 9 1140487942 71 846
 lev840.esx 87 108 342 370 0 87 1127264905 60 672
 lev335.esx 14 82 94 73 0 14 1106851311 139 61
-lev3747.esx 11 33 49 54 0 11 1384564440 91 2227
+lev3747.esx 13 38 60 61 0 13 1384564440 91 2227
 lev3443.esx 5 29 33 22 0 5 1366427814 168 2911
 lev2706.esx 12 51 50 50 0 11 1258536818 58 559
 lev1744.esx 15 35 52 57 0 15 1190067841 37 1505
@@ -263,7 +263,7 @@ lev1002.esx 33 77 215 233 0 33 1140078361 202 603
 lev872.esx 12 72 84 62 0 12 1130274193 142 61
 lev366.esx 29 114 149 131 2 29 1109136541 112 285
 lev49.esx 35 117 164 176 3 35 0 119 1
-lev3711.esx 9 22 25 31 1 9 1383672835 7 2976
+lev3711.esx 10 24 26 33 1 10 1383672835 7 2976
 lev2751.esx 20 74 89 82 0 19 1261214371 399 2374
 lev2149.esx 34 58 123 145 3 34 1205791628 104 1713
 lev1797.esx 28 56 101 105 1 28 1191005433 44 1491
@@ -528,7 +528,7 @@ lev387.esx 27 110 155 120 1 27 1109725812 222 223
 lev300.esx 21 108 138 113 1 21 1098497573 184 1
 lev3958.esx 6 28 27 28 0 6 1409226467 258 3037
 lev3770.esx 8 30 33 42 0 8 1385847361 71 2227
-lev3674.esx 7 25 26 28 0 7 1375067946 66 2947
+lev3674.esx 8 28 30 29 0 8 1375067946 66 2947
 lev2998.esx 10 25 32 32 0 10 1285112951 100 2490
 lev2733.esx 15 42 67 66 0 15 1261200050 162 2374
 lev1959.esx 6 25 29 29 0 6 1198038235 1053 411
@@ -732,7 +732,7 @@ lev1217.esx 71 115 240 316 2 71 1148093684 23 744
 lev351.esx 26 114 159 113 0 26 1108431762 124 1
 lev255.esx 29 90 124 115 4 29 1090729709 63 1
 lev35.esx 37 107 195 192 1 37 0 180 1
-lev3722.esx 5 16 19 24 0 5 1383923658 201 2878
+lev3722.esx 6 20 24 29 0 6 1383923658 201 2878
 lev3626.esx 7 25 26 36 0 7 1372128603 66 2947
 lev2762.esx 21 49 83 78 0 21 1261219501 69 2374
 lev2666.esx 9 40 28 38 0 8 1256480842 220 2307
@@ -907,7 +907,7 @@ lev1246.esx 46 107 184 225 0 46 1149309271 991 862
 lev323.esx 26 79 103 85 0 26 1105311686 115 214
 lev227.esx 31 120 156 140 2 31 1090613285 187 1
 lev85.esx 95 144 427 446 4 95 0 56 1
-lev3935.esx 8 22 38 44 0 8 1405272618 237 3030
+lev3935.esx 9 24 42 49 0 9 1405272618 237 3030
 lev3839.esx 3 19 17 12 0 3 1389679698 76 2227
 lev3145.esx 16 36 57 69 0 16 1294991352 514 2593
 lev2879.esx 7 31 29 26 2 6 1264702497 306 2374
@@ -967,7 +967,7 @@ lev1276.esx 12 53 68 37 0 12 1150852003 730 61
 lev373.esx 7 49 23 38 0 7 1109230504 284 144
 lev277.esx 21 146 160 120 1 21 1092672552 90 61
 lev54.esx 78 223 379 417 2 78 0 196 1
-lev3965.esx 3 15 15 13 0 3 1410321197 144 2878
+lev3965.esx 4 21 21 16 0 4 1410321197 144 2878
 lev3600.esx 8 33 38 41 0 8 1371255195 467 2227
 lev2924.esx 5 25 25 23 0 5 1270769388 326 2443
 lev2828.esx 17 48 77 64 0 17 1263092707 408 2374
@@ -1549,7 +1549,7 @@ lev596.esx 55 120 246 258 0 55 1115566281 74 479
 lev517.esx 31 90 142 178 0 31 1113265451 62 408
 lev213.esx 37 188 204 204 2 37 0 97 69
 lev70.esx 31 103 157 167 4 31 0 64 1
-lev4098.esx 7 42 45 39 0 7 1464272094 601 3037
+lev4098.esx 7 42 45 39 0 7 1464272094 573 3037
 lev3941.esx 3 22 19 12 0 3 1406134215 1845 2001
 lev3845.esx 7 34 36 33 0 7 1390249994 171 2878
 lev2900.esx 11 52 44 53 0 10 1265915728 181 2400
@@ -1765,7 +1765,7 @@ lev910.esx 52 105 219 213 7 52 1132794261 33 589
 lev308.esx 13 66 77 65 0 13 1101176034 355 61
 lev187.esx 31 164 207 193 2 31 0 247 64
 lev100.esx 42 140 204 223 2 42 0 120 1
-lev3778.esx 9 21 34 28 0 9 1386032303 23 2986
+lev3778.esx 10 22 36 31 0 10 1386032303 23 2986
 lev2533.esx 8 40 42 35 0 7 1250256687 163 1998
 lev1779.esx 41 64 134 183 0 41 1190576469 14 1546
 lev778.esx 59 97 221 290 1 59 1123339496 92 610
@@ -1883,6 +1883,7 @@ lev1540.esx 11 47 61 48 0 11 1180045869 670 1345
 lev729.esx 43 152 240 251 0 43 1120864173 143 574
 lev521.esx 33 101 159 185 0 33 1113265490 75 408
 lev425.esx 31 102 184 139 0 31 1110748555 292 288
+lev4101.esx 0 0 0 0 0 0 1473002836 426 2878
 lev3933.esx 4 28 24 23 0 4 1404566017 352 2001
 lev3837.esx 3 14 16 13 0 3 1389567709 301 2983
 lev3143.esx 8 22 31 32 0 8 1294991323 309 2593
@@ -2020,7 +2021,7 @@ lev2466.esx 6 42 32 30 2 5 1238727190 2619 2103
 lev541.esx 56 119 239 280 2 56 1113265687 78 408
 lev445.esx 31 81 177 189 0 31 1111441754 40 61
 lev4065.esx 4 28 24 17 0 4 1441686234 244 2227
-lev3912.esx 7 15 28 31 0 7 1401981042 111 2878
+lev3912.esx 8 17 33 37 0 8 1401981042 111 2878
 lev3816.esx 9 24 32 41 0 9 1388309862 261 2993
 lev3122.esx 6 22 19 31 1 6 1294326169 441 2571
 lev3026.esx 3 21 21 20 0 3 1287623729 383 2400
@@ -2055,6 +2056,7 @@ lev3542.esx 3 16 16 16 0 3 1369495327 46 2947
 lev3446.esx 8 28 32 31 0 8 1366491590 64 2918
 lev1447.esx 46 148 273 204 1 45 1168408948 1253 1215
 lev522.esx 28 94 129 151 0 28 1113265501 77 408
+lev4100.esx 1 4 5 5 0 1 1472937456 59 690
 lev4004.esx 5 31 30 28 0 5 1414258764 161 2878
 lev3932.esx 5 26 24 23 0 5 1404258609 206 2001
 lev3142.esx 10 29 36 35 1 10 1294888096 1010 2593
@@ -2066,7 +2068,7 @@ lev1837.esx 11 31 42 53 0 11 1194973846 33 1560
 lev1143.esx 6 38 41 39 0 6 1144349505 363 411
 lev1047.esx 9 32 41 43 0 9 1141451224 31 411
 lev122.esx 30 181 204 183 1 30 0 224 56
-lev3552.esx 8 26 34 34 0 8 1369858173 65 2878
+lev3552.esx 9 28 39 38 0 9 1369858173 65 2878
 lev2496.esx 15 57 89 65 0 14 1242047195 154 1998
 lev2411.esx 20 48 76 84 0 18 1236801023 54 1549
 lev1553.esx 6 38 40 37 0 6 1180977266 394 419
@@ -2264,7 +2266,7 @@ lev992.esx 49 86 199 175 0 49 1139881476 156 744
 lev913.esx 18 81 106 104 0 18 1133024935 172 689
 lev182.esx 24 140 167 156 2 24 0 267 64
 lev103.esx 34 107 157 145 7 34 0 64 1
-lev3679.esx 7 12 25 31 0 7 1378816309 73 2966
+lev3679.esx 8 13 28 35 0 8 1378816309 73 2966
 lev2734.esx 14 57 65 62 0 13 1261212056 464 2374
 lev2638.esx 13 59 58 64 0 12 1254413804 1557 2324
 lev2430.esx 7 45 19 34 0 6 1237403835 979 1550
